// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ElasticAgentCard props button 1`] = `
<EuiCard
  description="Use Elastic Agent for a simple, unified way to collect data from your machines."
  footer={
    <EuiButton
      fill={true}
      href="/app/integrations/browse"
    >
      Button
    </EuiButton>
  }
  image={
    <EuiImage
      alt=""
      css="unknown styles"
      size="fullWidth"
      url="/plugins/kibanaReact/assets/elastic_agent_card.svg"
    />
  }
  paddingSize="l"
  title={
    <EuiScreenReaderOnly>
      <span>
        Add Elastic Agent
      </span>
    </EuiScreenReaderOnly>
  }
/>
`;

exports[`ElasticAgentCard props category 1`] = `
<EuiCard
  description="Use Elastic Agent for a simple, unified way to collect data from your machines."
  footer={
    <EuiButton
      fill={true}
      href="/app/integrations/browse/custom"
    >
      Add Elastic Agent
    </EuiButton>
  }
  image={
    <EuiImage
      alt=""
      css="unknown styles"
      size="fullWidth"
      url="/plugins/kibanaReact/assets/elastic_agent_card.svg"
    />
  }
  paddingSize="l"
  title={
    <EuiScreenReaderOnly>
      <span>
        Add Elastic Agent
      </span>
    </EuiScreenReaderOnly>
  }
/>
`;

exports[`ElasticAgentCard props href 1`] = `
<EuiCard
  description="Use Elastic Agent for a simple, unified way to collect data from your machines."
  footer={
    <EuiButton
      fill={true}
      href="#"
    >
      Button
    </EuiButton>
  }
  image={
    <EuiImage
      alt=""
      css="unknown styles"
      size="fullWidth"
      url="/plugins/kibanaReact/assets/elastic_agent_card.svg"
    />
  }
  paddingSize="l"
  title={
    <EuiScreenReaderOnly>
      <span>
        Add Elastic Agent
      </span>
    </EuiScreenReaderOnly>
  }
/>
`;

exports[`ElasticAgentCard props recommended 1`] = `
<EuiCard
  betaBadgeProps={
    Object {
      "label": "Recommended",
    }
  }
  description="Use Elastic Agent for a simple, unified way to collect data from your machines."
  footer={
    <EuiButton
      fill={true}
      href="/app/integrations/browse"
    >
      Add Elastic Agent
    </EuiButton>
  }
  image={
    <EuiImage
      alt=""
      css="unknown styles"
      size="fullWidth"
      url="/plugins/kibanaReact/assets/elastic_agent_card.svg"
    />
  }
  paddingSize="l"
  title={
    <EuiScreenReaderOnly>
      <span>
        Add Elastic Agent
      </span>
    </EuiScreenReaderOnly>
  }
/>
`;

exports[`ElasticAgentCard props target and rel are forwarded to the footer button 1`] = `
<EuiCard
  description="Use Elastic Agent for a simple, unified way to collect data from your machines."
  footer={
    <EuiButton
      fill={true}
      href="#"
      rel="noopener"
      target="_blank"
    >
      Button
    </EuiButton>
  }
  image={
    <EuiImage
      alt=""
      css="unknown styles"
      size="fullWidth"
      url="/plugins/kibanaReact/assets/elastic_agent_card.svg"
    />
  }
  paddingSize="l"
  title={
    <EuiScreenReaderOnly>
      <span>
        Add Elastic Agent
      </span>
    </EuiScreenReaderOnly>
  }
/>
`;

exports[`ElasticAgentCard renders 1`] = `
<EuiCard
  description="Use Elastic Agent for a simple, unified way to collect data from your machines."
  footer={
    <EuiButton
      fill={true}
      href="/app/integrations/browse"
    >
      Add Elastic Agent
    </EuiButton>
  }
  image={
    <EuiImage
      alt=""
      css="unknown styles"
      size="fullWidth"
      url="/plugins/kibanaReact/assets/elastic_agent_card.svg"
    />
  }
  paddingSize="l"
  title={
    <EuiScreenReaderOnly>
      <span>
        Add Elastic Agent
      </span>
    </EuiScreenReaderOnly>
  }
/>
`;
